Prevent scrollbars appearing in main window.

--- a/sass/_chat.sass
+++ b/sass/_chat.sass
@@ -39,6 +39,7 @@ $inputButtonWidth: 4em
 		outline: none
 	button:hover
 		background-color: #3C553F
+		text-shadow: none
 
 .chatTabs
 	border-top-left-radius: 10px
