--- a/sass/_modal_window.sass
+++ b/sass/_modal_window.sass
@@ -18,7 +18,7 @@
 	max-width: 50%
 	.modalTitle
 		background-image: linear-gradient(to bottom, #444, #222)
-		color: rgb(183, 164, 156)
+		color: rgb(183, 184, 156)
 		font-size: 1.3em
 		padding: 5px
 	.modalCloseButton
