--- a/sass/main.sass
+++ b/sass/main.sass
@@ -11,7 +11,14 @@ body
 	font-size: small
 
 html, body, #main
+	position: absolute
 	height: 100%
+	width: 100%
+	margin: 0
+
+#main
+	padding: 1.0em
+	box-sizing: border-box
 
 input[type="text"]
 	color: white
